log
Wed Mar 16 18:35:09 HSP 2022: 
 tests:  0|6
total_score: 0/70
1144b97
Wed Mar 16 18:50:23 HSP 2022: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a18acb3
Wed Mar 16 19:22:34 HSP 2022: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:47:16: error: invalid initializer
     Node aux = list->current;
                ^~~~
list.c:47:10: error: unused variable 'aux' [-Werror=unused-variable]
     Node aux = list->current;
          ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
e374070
Thu Mar 17 10:36:06 HSP 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:47:5: error: unknown type name 'Nodo'
     Nodo aux = list->current;
     ^~~~
list.c:47:16: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     Nodo aux = list->current;
                ^~~~
list.c:49:15: error: invalid type argument of '->' (have 'int')
     return aux->data;
               ^~
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
8e1fad9
Thu Mar 17 10:37:14 HSP 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
08ebd7d
Thu Mar 17 10:38:05 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
967f09f
Thu Mar 17 10:41:56 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
4c0602c
Thu Mar 17 10:43:31 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
1e9af13
Thu Mar 17 10:48:26 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c0d3af4
Thu Mar 17 10:48:52 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0c58f55
Thu Mar 17 10:49:40 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
826c705
Thu Mar 17 10:50:08 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
5805617
Thu Mar 17 10:55:27 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
440b09f
Thu Mar 17 10:57:18 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
aa9190b
Thu Mar 17 11:02:39 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
f386e46
Thu Mar 17 11:03:39 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7a069af
Thu Mar 17 11:04:06 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
66d23ef
Fri Mar 18 14:13:59 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
739b251
Fri Mar 18 14:18:02 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
6b35ba6
Fri Mar 18 14:18:51 HSP 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
3c5f826
Fri Mar 18 14:25:27 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
bce863e
Fri Mar 18 14:34:20 HSP 2022: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
cd008b6
Fri Mar 18 14:34:43 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3d8648f
Fri Mar 18 14:35:17 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
23207bf
Fri Mar 18 14:35:55 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
9dacdff
Fri Mar 18 14:36:09 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
275e128
Fri Mar 18 15:23:46 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
635415b
Fri Mar 18 15:24:17 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
79811df
Fri Mar 18 15:25:52 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4e94b3c
Fri Mar 18 15:33:19 HSP 2022: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
6233d17
Fri Mar 18 15:35:10 HSP 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
2f0665e
Fri Mar 18 20:31:53 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:53:5: error: 'return' with no value, in function returning non-void [-Werror]
     return;
     ^~~~~~
list.c:46:8: note: declared here
 void * nextList(List * list) {
        ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4072a80
Fri Mar 18 20:32:09 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
f87b34a
Fri Mar 18 21:59:27 HSP 2022: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
b4d87a3
Fri Mar 18 22:01:41 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f63e847
Fri Mar 18 22:02:26 HSP 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
f5be4e0
Fri Mar 18 22:13:36 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
896aceb
